# goit-pythonweb-hw-01

./: .gitignore  pyproject.toml  task_1.py  task_2.py
