[project]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = ""
authors = [
    {name = "Iryna Alchynska",email = "iren0988@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

